--- a/helm-charts/mobiflow-auditor/values.yaml
+++ b/helm-charts/mobiflow-auditor/values.yaml
@@ -18,9 +18,12 @@ enable-prometheus: false
 config:
   servicePath: "/etc/onos/config"
   configPath: "/etc/fb/config"
+  mobiflowPath: "/etc/mobiflow/config"
   ric:
     e2tEndpoint: "onos-e2t:5150"
     topoEndpoint: "onos-topo:5150"
+  mobiflow:
+    mongo_db_port: 27017
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
