fix service access problem

--- a/helm-charts/mobiflow-auditor/templates/deployment.yaml
+++ b/helm-charts/mobiflow-auditor/templates/deployment.yaml
@@ -89,6 +89,8 @@ spec:
           ports:
             - name: http
               containerPort: 8080
+            - name: rpc
+              containerPort: {{ .Values.config.mobiflow.rpc_port }}
           startupProbe:
             httpGet:
               path: /status
