move to local docker

--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -60,8 +60,8 @@ fullname: {}
 ###############    The following are from the xApp descriptor     ###############
 containers:
 - image:
-    name: xapp/mobiflow-auditor
-    registry: 5gsec.se-ran.org:10004
+    name: mobiflow-auditor
+    registry: localhost:5000
     tag: 0.0.1
   name: mobiflow-auditor
 controls:
