--- a/init/config-file.json
+++ b/init/config-file.json
@@ -58,6 +58,9 @@
     },
     "db" : {
             "waitForSdl": false
+    },
+    "ran" : {
+        "target_oid_list": ["1.3.6.1.4.1.53148.1.2.2.2"]
     }
 }
 
